--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
-  <head>
-  </head>
+  <head> </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.ts"> </script>
+    <style>
+      @tailwind base;
+      @tailwind components;
+      @tailwind utilities;
+    </style>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
