chore: format code and organized dependencies

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body>
     <div id="root"></div>
     <style>
-      @tailwind base;
+      /* @tailwind base; */
       @tailwind components;
       @tailwind utilities;
     </style>
