add simulated GitHub login pange as an example

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
-<html>
+<html data-color-mode="auto" data-dark-theme="dark">
   <head> </head>
   <body>
     <div id="root"></div>
     <style>
-      /* @tailwind base; */
+      /* @tailwind base;
       @tailwind components;
-      @tailwind utilities;
+      @tailwind utilities; */
+
+      @import url(/assets/dark.css);
+      @import url(/assets/dark.css);
+      @import url(/assets/primer.css);
+      @import url(/assets/github.css);
+      @import url(/assets/global.css);
     </style>
     <script type="module" src="/src/index.ts"></script>
   </body>
