fix example: light theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-color-mode="auto" data-dark-theme="dark">
+<html data-color-mode="auto" data-dark-theme="dark" light-color-theme="light">
   <head> </head>
   <body>
     <div id="root"></div>
