fix example: light theme

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
       @import url(/assets/dark.css);
       @import url(/assets/dark.css);
+      @import url(/assets/light.css);
       @import url(/assets/primer.css);
       @import url(/assets/github.css);
       @import url(/assets/global.css);
