update example: use tailwindcss instead

--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!doctype html>
-<html data-color-mode="auto" data-dark-theme="dark" light-color-theme="light">
-  <head> </head>
-  <body>
-    <div id="root"></div>
+<html>
+  <head>
     <style>
-      /* @tailwind base;
+      @tailwind base;
       @tailwind components;
-      @tailwind utilities; */
-
-      @import url(/assets/dark.css);
-      @import url(/assets/dark.css);
-      @import url(/assets/light.css);
-      @import url(/assets/primer.css);
-      @import url(/assets/github.css);
-      @import url(/assets/global.css);
+      @tailwind utilities;
     </style>
     <script type="module" src="/src/index.ts"></script>
-  </body>
+  </head>
+  <body id="root"></body>
 </html>
