--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       @tailwind components;
       @tailwind utilities;
     </style>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/src/examples/app/app.r.ts"></script>
   </head>
   <body id="root"></body>
 </html>
