update icons support

--- a/packages/examples/mdui2/index.html
+++ b/packages/examples/mdui2/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
   <head>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <script type="module" src="./src/app.r.ts"></script>
   </head>
   <body>
