root element should not be body

--- a/packages/examples/gallery/index.html
+++ b/packages/examples/gallery/index.html
@@ -13,5 +13,7 @@
     />
     <script type="module" src="./src/app.r.ts"></script>
   </head>
-  <body id="root"></body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
