--- a/packages/examples/gh-login/index.html
+++ b/packages/examples/gh-login/index.html
@@ -8,5 +8,7 @@
     </style>
     <script type="module" src="./src/app.r.ts"></script>
   </head>
-  <body id="root"></body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
