change margin into padding in body of mdui2 example

--- a/packages/examples/mdui2/index.html
+++ b/packages/examples/mdui2/index.html
@@ -6,6 +6,12 @@
       rel="stylesheet"
     />
     <script type="module" src="./src/app.r.ts"></script>
+    <style>
+      body {
+        margin: 0;
+        padding: 8px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
