--- a/packages/examples/gallery/index.html
+++ b/packages/examples/gallery/index.html
@@ -6,7 +6,7 @@
       @tailwind components;
       @tailwind utilities;
     </style>
-    <!-- Used by MdUI2 -->
+    <!-- Used by MdUI -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
